Data acquired ig
Co-authored-by: Enzo-TTD <lorenzogouldd@gmail.com>

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -19,19 +19,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beauty_review: Dataset = load_dataset(\n",
-    "    \"McAuley-Lab/Amazon-Reviews-2023\",\n",
-    "    \"raw_review_All_Beauty\",\n",
-    "    split=\"full\",\n",
-    "    trust_remote_code=True,\n",
-    ")\n",
+    "# auto_review: Dataset = load_dataset(\n",
+    "#     \"McAuley-Lab/Amazon-Reviews-2023\",\n",
+    "#     \"raw_review_Automotive\",\n",
+    "#     split=\"full\",\n",
+    "#     trust_remote_code=True,\n",
+    "# )\n",
     "\n",
-    "beauty_meta: Dataset = load_dataset(\n",
-    "    \"McAuley-Lab/Amazon-Reviews-2023\",\n",
-    "    \"raw_meta_All_Beauty\",\n",
-    "    split=\"full\",\n",
-    "    trust_remote_code=True,\n",
-    ")"
+    "# auto_meta: Dataset = load_dataset(\n",
+    "#     \"McAuley-Lab/Amazon-Reviews-2023\",\n",
+    "#     \"raw_meta_Automotive\",\n",
+    "#     split=\"full\",\n",
+    "#     trust_remote_code=True,\n",
+    "# )"
    ]
   },
   {
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beauty_review.to_parquet(\"data/raw/review/amazon_review_beauty.parquet\")\n",
-    "beauty_meta.to_parquet(\"data/raw/meta/amazon_meta_beauty.parquet\")"
+    "# auto_review.to_parquet(\"amazon_review_auto.parquet\")\n",
+    "# auto_meta.to_parquet(\"amazon_meta_auto.parquet\")"
    ]
   },
   {
@@ -52,23 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_review: pl.DataFrame = pl.read_parquet(\"data/raw/review/amazon_review_beauty.parquet\")\n",
-    "df_meta: pl.DataFrame = pl.read_parquet(\"data/raw/meta/amazon_meta_beauty.parquet\")"
+    "df_review: pl.DataFrame = pl.read_parquet(\"amazon_review_auto.parquet\")\n",
+    "df_meta: pl.DataFrame = pl.read_parquet(\"amazon_meta_auto.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df: pl.DataFrame = df_review.join(df_meta, on=\"parent_asin\", how=\"left\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "9c6909cd",
+   "execution_count": null,
+   "id": "2d7794e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,35 +76,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "65bc3547",
+   "execution_count": null,
+   "id": "6a4d1ab5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop invalid ratings (missing or not in [1,2,3,4,5])\n",
-    "df: pl.DataFrame = df.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
+    "df_review: pl.DataFrame = df_review.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
     "# Drop empty review texts\n",
-    "df = df.filter(pl.col(\"text\").str.strip_chars().str.len_chars() > 0)\n",
+    "df_review = df_review.filter(pl.col(\"text\").str.strip_chars().str.len_chars() > 0)\n",
     "\n",
-    "df = df.with_columns([extract_brand()])\n",
-    "\n",
-    "df = df.with_columns([\n",
+    "df_review = df_review.with_columns([\n",
     "    pl.col(\"text\").str.count_matches(r\"\\b\\w+\\b\").alias(\"review_length\"),\n",
     "    (pl.col(\"timestamp\").cast(pl.Datetime(\"ms\")).dt.year()).alias(\"year\")\n",
-    "])\n",
-    "\n",
-    "\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df: pl.DataFrame = df_review.join(df_meta, on=\"parent_asin\", how=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fddb293b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df: pl.DataFrame = df.with_columns([extract_brand()])\n",
     "df = df.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "54824944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65bc3547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Drop invalid ratings (missing or not in [1,2,3,4,5])\n",
+    "# df: pl.DataFrame = df.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
+    "# # Drop empty review texts\n",
+    "# df = df.filter(pl.col(\"text\").str.strip_chars().str.len_chars() > 0)\n",
+    "\n",
+    "# df = df.with_columns([extract_brand()])\n",
+    "\n",
+    "# df = df.with_columns([\n",
+    "#     pl.col(\"text\").str.count_matches(r\"\\b\\w+\\b\").alias(\"review_length\"),\n",
+    "#     (pl.col(\"timestamp\").cast(pl.Datetime(\"ms\")).dt.year()).alias(\"year\")\n",
+    "# ])\n",
+    "\n",
+    "\n",
+    "# df = df.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "beb1b0e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.write_parquet(\"data/intermediate/amazon_beauty.parquet\")"
+    "# df.write_parquet(\"data/intermediate/amazon_auto.parquet\")"
    ]
   }
  ],
@@ -133,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
