--- a/lazy.ipynb
+++ b/lazy.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ecadafaa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset, Dataset, DatasetDict, load_from_disk\n",
-    "from bigdata_a3_utils import download_all_amazon_reviews, load_compressed_dataset\n",
+    "# from datasets import load_dataset, Dataset, DatasetDict, load_from_disk\n",
+    "# from bigdata_a3_utils import download_all_amazon_reviews, load_compressed_dataset\n",
     "import polars as pl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcd97bec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(pl.__version__)"
    ]
   },
   {
@@ -57,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "19a696ba",
    "metadata": {},
    "outputs": [],
@@ -70,27 +60,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "098ebce2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lf_review: pl.LazyFrame = pl.scan_parquet(\"data/raw/review/amazon_review_beauty.parquet\")\n",
-    "lf_meta: pl.LazyFrame = pl.scan_parquet(\"data/raw/meta/amazon_meta_beauty.parquet\")"
+    "lf_review: pl.LazyFrame = pl.scan_parquet(\"data/raw/review/Gift_Cards.parquet\")\n",
+    "lf_meta: pl.LazyFrame = pl.scan_parquet(\"data/raw/meta/Gift_Cards.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "479a896a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lf_review: pl.LazyFrame = lf_review.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
-    "lf_review = lf_review.filter(pl.col(\"text\").str.strip_chars().str.len_chars() > 0)\n",
+    "lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"left\")\n",
+    "\n",
+    "lf: pl.LazyFrame = lf.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
+    "lf = lf.filter(pl.col(\"text\").str.strip_chars().str.len_chars() > 0)\n",
     "\n",
     "\n",
-    "lf_review = lf_review.with_columns([\n",
+    "lf = lf.with_columns([\n",
     "    pl.col(\"text\").str.count_matches(r\"\\b\\w+\\b\").alias(\"review_length\"),\n",
     "    (pl.col(\"timestamp\").cast(pl.Datetime(\"ms\")).dt.year()).alias(\"year\")\n",
     "])"
@@ -98,57 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "038eabf8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"left\")\n",
-    "lf = lf.with_columns([extract_brand()])\n",
-    "lf = lf.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "c73b03ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "STREAMING:\n",
-      "  UNIQUE[maintain_order: false, keep_strategy: First] BY Some([\"user_id\", \"text\", \"asin\"])\n",
-      "     WITH_COLUMNS:\n",
-      "     [when([(col(\"store\").str.strip_chars([null])) != (String())]).then(col(\"store\")).otherwise(null.strict_cast(String)).coalesce([col(\"details\").str.extract([String(Brand[:\\s]*([^\\s,;]+))]), String(Unknown)]).alias(\"brand\")] \n",
-      "      LEFT JOIN:\n",
-      "      LEFT PLAN ON: [col(\"parent_asin\")]\n",
-      "         WITH_COLUMNS:\n",
-      "         [col(\"text\").str.count_matches([String(\\b\\w+\\b)]).alias(\"review_length\"), col(\"timestamp\").strict_cast(Datetime(Milliseconds, None)).dt.year().alias(\"year\")] \n",
-      "          Parquet SCAN [data/raw/review/amazon_review_beauty.parquet]\n",
-      "          PROJECT */10 COLUMNS\n",
-      "          SELECTION: [(col(\"rating\").is_in([Series])) & ([(col(\"text\").str.strip_chars([null]).str.len_chars()) > (0)])]\n",
-      "      RIGHT PLAN ON: [col(\"parent_asin\")]\n",
-      "        Parquet SCAN [data/raw/meta/amazon_meta_beauty.parquet]\n",
-      "        PROJECT */16 COLUMNS\n",
-      "      END LEFT JOIN\n"
-     ]
-    }
-   ],
-   "source": [
-    "# df: pl.DataFrame = lf.collect(streaming=True)\n",
-    "print(lf.explain(streaming=True))"
+    "lf = lf.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
+    "# lf = lf.with_columns([extract_brand()])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb1b0e5",
+   "id": "c73b03ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.write_parquet(\"data/intermediate/amazon_beauty.parquet\")"
+    "# lf.sink_parquet(\"oops.parquet\")\n",
+    "# print(lf.explain(streaming=True))"
    ]
   }
  ],
