work in progress

--- a/1-data-acquisition.ipynb
+++ b/1-data-acquisition.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for category in TEST_CATEGORIES:\n",
+    "for category in ALL_CATEGORIES[:10]:\n",
     "    print(f\"Downloading {category}...\\n\")\n",
     "    download_data(category, REVIEW)\n",
     "    download_data(category, META)"
