--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "import polars as pl\n",
     "from amazon.constants import *\n",
-    "N_SAMPLE = 100_000"
+    "import gc\n",
+    "\n",
+    "N_SAMPLE = 200_000"
    ]
   },
   {
@@ -26,35 +28,43 @@
     "\n",
     "\n",
     "def process_category(category: str) -> None:\n",
-    "    lf_review: pl.LazyFrame = pl.scan_parquet(f\"data/raw/{REVIEW}/{category}.parquet\")\n",
-    "    lf_meta: pl.LazyFrame = pl.scan_parquet(f\"data/raw/{META}/{category}.parquet\")\n",
+    "    lf_review: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{REVIEW}/{category}.parquet\")\n",
+    "    lf_meta: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{META}/{category}.parquet\")\n",
+    "\n",
     "    lf_review = lf_review.head(N_SAMPLE)\n",
     "    lf_meta = lf_meta.head(N_SAMPLE)\n",
     "\n",
-    "    lf_review: pl.LazyFrame = lf_review.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
-    "    lf_review = lf_review.filter(pl.col(\"text\").str.strip_chars().str.len_chars() > 0)\n",
-    "\n",
-    "    lf_review = lf_review.with_columns([\n",
+    "    # a) Merge on parent asin\n",
+    "    lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"left\")\n",
+    "    \n",
+    "    # b) Handle Invalid / Missing Values\n",
+    "    lf: pl.LazyFrame = lf.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
+    "    lf = lf.filter(pl.col(\"text\").str.strip_chars().str.len_chars() > 0)\n",
+    "    lf = lf.with_columns([extract_brand()])\n",
+    "    \n",
+    "    # c) Remove Duplicates\n",
+    "    lf = lf.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
+    "   \n",
+    "    # d) Derived Columns:\n",
+    "    lf = lf.with_columns([\n",
     "        pl.col(\"text\").str.count_matches(r\"\\b\\w+\\b\").alias(\"review_length\"),\n",
     "        (pl.col(\"timestamp\").cast(pl.Datetime(\"ms\")).dt.year()).alias(\"year\")\n",
     "    ])\n",
-    "\n",
-    "    lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"left\")\n",
-    "    lf = lf.with_columns([extract_brand()])\n",
-    "    lf = lf.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
-    "    lf.sink_parquet(f\"data/intermediate/{category}.parquet\")"
+    "    lf.sink_parquet(f\"{INTERMEDIATE}/{category}.parquet\", engine=\"streaming\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "409d0459",
+   "id": "f5053c40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for category in TEST_CATEGORIES:\n",
+    "for category in ALL_CATEGORIES[:15]:\n",
     "    print(f\"Cleaning dataset for {category}...\")\n",
-    "    process_category(category)"
+    "    process_category(category)\n",
+    "\n",
+    "gc.collect()"
    ]
   },
   {
@@ -64,13 +74,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged: pl.LazyFrame = pl.concat([\n",
-    "    pl.scan_parquet(f\"data/intermediate/{category}.parquet\")\n",
-    "    for category in TEST_CATEGORIES\n",
-    "])\n",
+    "# merged: pl.LazyFrame = pl.concat([\n",
+    "#     pl.scan_parquet(f\"{INTERMEDIATE}/{category}.parquet\")\n",
+    "#     for category in ALL_CATEGORIES[:15]\n",
+    "# ])\n",
     "\n",
+    "merged: pl.LazyFrame = pl.scan_parquet(f\"{INTERMEDIATE}/*.parquet\")\n",
     "merged = merged.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
-    "merged.sink_parquet(\"data/processed/amazon-2023.parquet\")"
+    "merged.sink_parquet(\"data/processed/amazon-2023.parquet\", engine=\"streaming\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0cfa20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged.collect(engine=\"streaming\")"
    ]
   }
  ],
@@ -90,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
