--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d5514817",
    "metadata": {},
    "outputs": [],
@@ -11,19 +11,21 @@
     "from amazon.constants import *\n",
     "import gc\n",
     "\n",
-    "N_SAMPLE = 200_000"
+    "N_SAMPLE = 200_000\n",
+    "# N_SAMPLE = 100_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eaf2cfc2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_brand() -> pl.Expr:\n",
     "    store_clean: pl.Then = pl.when(pl.col(\"store\").str.strip_chars() != \"\").then(pl.col(\"store\"))\n",
-    "    details_brand: pl.Expr = pl.col(\"details\").str.extract(r\"Brand[:\\s]*([^\\s,;]+)\", 1)\n",
+    "    # details_brand: pl.Expr = pl.col(\"details\").str.extract(r\"Brand[:\\s]*([^\\s,;]+)\", 1)\n",
+    "    details_brand: pl.Expr = pl.col(\"details\").str.extract(r\"Brand[:\\s\\-]*([A-Za-z0-9&\\s]+)\", 1)\n",
     "    return pl.coalesce([store_clean, details_brand, pl.lit(\"Unknown\")]).alias(\"brand\")\n",
     "\n",
     "\n",
@@ -55,21 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f5053c40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for category in ALL_CATEGORIES[:15]:\n",
-    "    print(f\"Cleaning dataset for {category}...\")\n",
-    "    process_category(category)\n",
+    "# for category in ALL_CATEGORIES[:15]:\n",
+    "#     print(f\"Cleaning dataset for {category}...\")\n",
+    "#     process_category(category)\n",
     "\n",
-    "gc.collect()"
+    "# gc.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1534c91b",
    "metadata": {},
    "outputs": [],
@@ -91,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged.collect(engine=\"streaming\")"
+    "# merged.collect(engine=\"streaming\")"
    ]
   }
  ],
