change join algo

--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d5514817",
    "metadata": {},
    "outputs": [],
@@ -11,20 +11,18 @@
     "from amazon.constants import *\n",
     "import gc\n",
     "\n",
-    "N_SAMPLE = 200_000\n",
-    "# N_SAMPLE = 100_000"
+    "N_SAMPLE = 500_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eaf2cfc2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_brand() -> pl.Expr:\n",
     "    store_clean: pl.Then = pl.when(pl.col(\"store\").str.strip_chars() != \"\").then(pl.col(\"store\"))\n",
-    "    # details_brand: pl.Expr = pl.col(\"details\").str.extract(r\"Brand[:\\s]*([^\\s,;]+)\", 1)\n",
     "    details_brand: pl.Expr = pl.col(\"details\").str.extract(r\"Brand[:\\s\\-]*([A-Za-z0-9&\\s]+)\", 1)\n",
     "    return pl.coalesce([store_clean, details_brand, pl.lit(\"Unknown\")]).alias(\"brand\")\n",
     "\n",
@@ -33,11 +31,11 @@
     "    lf_review: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{REVIEW}/{category}.parquet\")\n",
     "    lf_meta: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{META}/{category}.parquet\")\n",
     "\n",
-    "    lf_review = lf_review.head(N_SAMPLE)\n",
-    "    lf_meta = lf_meta.head(N_SAMPLE)\n",
+    "    # lf_review = lf_review.head(N_SAMPLE)\n",
+    "    # lf_meta = lf_meta.head(N_SAMPLE)\n",
     "\n",
     "    # a) Merge on parent asin\n",
-    "    lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"left\")\n",
+    "    lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"inner\")\n",
     "    \n",
     "    # b) Handle Invalid / Missing Values\n",
     "    lf: pl.LazyFrame = lf.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
@@ -57,29 +55,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f5053c40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for category in ALL_CATEGORIES[:15]:\n",
-    "#     print(f\"Cleaning dataset for {category}...\")\n",
-    "#     process_category(category)\n",
+    "for category in ALL_CATEGORIES[:15]:\n",
+    "    print(f\"Cleaning dataset for {category}...\")\n",
+    "    process_category(category)\n",
     "\n",
-    "# gc.collect()"
+    "gc.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1534c91b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merged: pl.LazyFrame = pl.concat([\n",
-    "#     pl.scan_parquet(f\"{INTERMEDIATE}/{category}.parquet\")\n",
-    "#     for category in ALL_CATEGORIES[:15]\n",
-    "# ])\n",
+    "merged: pl.LazyFrame = pl.concat([\n",
+    "    pl.scan_parquet(f\"{INTERMEDIATE}/{category}.parquet\")\n",
+    "    for category in ALL_CATEGORIES[:15]\n",
+    "])\n",
     "\n",
     "merged: pl.LazyFrame = pl.scan_parquet(f\"{INTERMEDIATE}/*.parquet\")\n",
     "merged = merged.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
