--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -31,8 +31,8 @@
     "    lf_review: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{REVIEW}/{category}.parquet\")\n",
     "    lf_meta: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{META}/{category}.parquet\")\n",
     "\n",
-    "    # lf_review = lf_review.head(N_SAMPLE)\n",
-    "    # lf_meta = lf_meta.head(N_SAMPLE)\n",
+    "    lf_review = lf_review.head(N_SAMPLE)\n",
+    "    lf_meta = lf_meta.head(N_SAMPLE)\n",
     "\n",
     "    # a) Merge on parent asin\n",
     "    lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"inner\")\n",
@@ -74,24 +74,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged: pl.LazyFrame = pl.concat([\n",
-    "    pl.scan_parquet(f\"{INTERMEDIATE}/{category}.parquet\")\n",
-    "    for category in ALL_CATEGORIES[:15]\n",
-    "])\n",
+    "# merged: pl.LazyFrame = pl.concat([\n",
+    "#     pl.scan_parquet(f\"{INTERMEDIATE}/{category}.parquet\")\n",
+    "#     for category in ALL_CATEGORIES[:15]\n",
+    "# ])\n",
     "\n",
     "merged: pl.LazyFrame = pl.scan_parquet(f\"{INTERMEDIATE}/*.parquet\")\n",
-    "merged = merged.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
+    "# merged = merged.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
     "merged.sink_parquet(\"data/processed/amazon-2023.parquet\", engine=\"streaming\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa0cfa20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# merged.collect(engine=\"streaming\")"
    ]
   }
  ],
