visualizations done --dmitri

--- a/3-EDA.ipynb
+++ b/3-EDA.ipynb
@@ -8,13 +8,10 @@
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "import plotly.express as px\n",
     "from plotly.graph_objs import Figure\n",
-    "import numpy as np\n",
-    "import nltk\n",
     "from amazon.visuals import *\n",
-    "# nltk.download(\"vader_lexicon\")\n",
-    "from nltk.sentiment.vader import SentimentIntensityAnalyzer"
+    "# import nltk\n",
+    "# nltk.download(\"vader_lexicon\")"
    ]
   },
   {
@@ -89,27 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = price_rating(lf, \"price_rating\")\n",
+    "fig: Figure = price_rating(lf, \"price_rating\")\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65be9fb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "analyzer = SentimentIntensityAnalyzer()\n",
-    "\n",
-    "def get_sentiment(reviews: pl.Series) -> pl.Series:\n",
-    "    def scale_sentiment(review: str) -> float:\n",
-    "        # normalize polarity score from [-1, 1] to [1, 5]\n",
-    "        polarity: dict[str, float] = analyzer.polarity_scores(review)\n",
-    "        compound_score: float = polarity[\"compound\"]\n",
-    "        return round(1 + (compound_score + 1) * 2)\n",
-    "    \n",
-    "    return reviews.map_elements(scale_sentiment, pl.Float64)"
    ]
   },
   {
@@ -119,32 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bin: np.ndarray = np.arange(1, 6)\n",
-    "expr: pl.Expr = pl.col(\"text\").map_batches(get_sentiment).alias(\"sentiment_rating\")\n",
-    "query: pl.LazyFrame = lf.select([\"rating\", expr])\n",
-    "\n",
-    "sentiment_analysis: pl.DataFrame = query.collect()\n",
-    "\n",
-    "fig = px.box(\n",
-    "    sentiment_analysis,\n",
-    "    x=\"rating\",\n",
-    "    y=\"sentiment_rating\",\n",
-    "    height=800,\n",
-    "    color=\"rating\",\n",
-    "    color_discrete_sequence=px.colors.qualitative.Prism,\n",
-    "    category_orders={\"rating\": bin},\n",
-    "    template=\"ggplot2\",\n",
-    ")\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    title=\"Discrepancy Between User Rating and Review Sentiment\",\n",
-    "    xaxis_title=\"Star Rating (1-5)\",\n",
-    "    yaxis_title=\"Sentiment\",\n",
-    ")\n",
-    "\n",
-    "fig.show()\n",
-    "\n",
-    "del sentiment_analysis"
+    "fig: Figure = plot_sentiment(lf, \"sentiment discrepancy\", True)\n",
+    "fig.show()"
    ]
   }
  ],
