--- a/3-data-analysis.ipynb
+++ b/3-data-analysis.ipynb
@@ -100,6 +100,28 @@
     "fig: Figure = plot_sentiment(lf, \"sentiment discrepancy\", True)\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb74c27c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig: Figure = plot_helpful_votes(lf, \"helpful_votes\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffa48d25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig: Figure = plot_verified_purchase(lf, \"verified_purchase\")\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
