--- a/3-data-analysis.ipynb
+++ b/3-data-analysis.ipynb
@@ -93,6 +93,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cb74c27c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig: Figure = plot_helpful_votes(lf, \"helpful_votes\")\n",
+    "# # fig.write_image(\"data/processed/imgs/helpful_votes.png\",  width=1500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffa48d25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig: Figure = plot_verified_purchase(lf, \"verified_purchase\")\n",
+    "# fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1d40d7cb",
    "metadata": {},
    "outputs": [],
