--- a/2-data-cleaning.ipynb
+++ b/2-data-cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d5514817",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,38 @@
     "import polars as pl\n",
     "from amazon.constants import *\n",
     "import gc\n",
+    "import os\n",
     "\n",
-    "N_SAMPLE = 500_000"
+    "# N_SAMPLE = 500_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "80f083b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storage: list[str] = [\n",
+    "    \"title_right\",\n",
+    "    \"images_right\",\n",
+    "    \"description\",\n",
+    "    \"features\",\n",
+    "    \"videos\",\n",
+    "    \"subtitle\",\n",
+    "    \"bought_together\",\n",
+    "    \"author\",\n",
+    "    \"images\",\n",
+    "    \"title\",\n",
+    "    \"average_rating\",\n",
+    "    \"rating_number\",\n",
+    "    \"categories\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "eaf2cfc2",
    "metadata": {},
    "outputs": [],
@@ -28,19 +53,25 @@
     "\n",
     "\n",
     "def process_category(category: str) -> None:\n",
+    "    path: str = f\"{INTERMEDIATE}/{category}.parquet\"\n",
+    "    if os.path.exists(path):\n",
+    "        print(f\"File already exists: {path}. Skipping.\")\n",
+    "        return\n",
     "    lf_review: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{REVIEW}/{category}.parquet\")\n",
     "    lf_meta: pl.LazyFrame = pl.scan_parquet(f\"{RAW}/{META}/{category}.parquet\")\n",
-    "\n",
-    "    lf_review = lf_review.head(N_SAMPLE)\n",
-    "    lf_meta = lf_meta.head(N_SAMPLE)\n",
+    "    # lf_review = lf_review.head(N_SAMPLE)\n",
+    "    # lf_meta = lf_meta.head(N_SAMPLE)\n",
     "\n",
     "    # a) Merge on parent asin\n",
     "    lf: pl.LazyFrame = lf_review.join(lf_meta, on=\"parent_asin\", how=\"inner\")\n",
-    "    \n",
+    "    # lf = lf.drop([\"title_right\", \"images_right\"])\n",
+    "    lf = lf.drop(storage)\n",
+    "\n",
     "    # b) Handle Invalid / Missing Values\n",
     "    lf: pl.LazyFrame = lf.filter(pl.col(\"rating\").is_in([1, 2, 3, 4, 5]))\n",
     "    lf = lf.filter(pl.col(\"text\").str.strip_chars().str.len_chars() > 0)\n",
     "    lf = lf.with_columns([extract_brand()])\n",
+    "    lf = lf.drop(\"details\") # delete ltr\n",
     "    \n",
     "    # c) Remove Duplicates\n",
     "    lf = lf.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
@@ -48,9 +79,10 @@
     "    # d) Derived Columns:\n",
     "    lf = lf.with_columns([\n",
     "        pl.col(\"text\").str.count_matches(r\"\\b\\w+\\b\").alias(\"review_length\"),\n",
-    "        (pl.col(\"timestamp\").cast(pl.Datetime(\"ms\")).dt.year()).alias(\"year\")\n",
+    "        # (pl.col(\"timestamp\").cast(pl.Datetime(\"ms\")).dt.year()).alias(\"year\")\n",
     "    ])\n",
-    "    lf.sink_parquet(f\"{INTERMEDIATE}/{category}.parquet\", engine=\"streaming\")"
+    "\n",
+    "    lf.sink_parquet(path, engine=\"streaming\", row_group_size=100)"
    ]
   },
   {
@@ -60,11 +92,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for category in ALL_CATEGORIES[:15]:\n",
+    "for category in ALL_CATEGORIES[:8]:\n",
     "    print(f\"Cleaning dataset for {category}...\")\n",
     "    process_category(category)\n",
-    "\n",
-    "gc.collect()"
+    "    gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1ff2b3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pl.read_parquet(\"data/intermediate/All_Beauty.parquet\").head()"
    ]
   },
   {
@@ -79,9 +120,9 @@
     "#     for category in ALL_CATEGORIES[:15]\n",
     "# ])\n",
     "\n",
-    "merged: pl.LazyFrame = pl.scan_parquet(f\"{INTERMEDIATE}/*.parquet\")\n",
+    "# merged: pl.LazyFrame = pl.scan_parquet(f\"{INTERMEDIATE}/*.parquet\")\n",
     "# merged = merged.unique(subset=[\"user_id\", \"text\", \"asin\"], keep=\"first\")\n",
-    "merged.sink_parquet(\"data/processed/amazon-2023.parquet\", engine=\"streaming\")"
+    "# merged.sink_parquet(\"data/processed/amazon-2023.parquet\", engine=\"streaming\")"
    ]
   }
  ],
